Fix formatting on mobile

--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -93,6 +93,7 @@ p.carouselCaption {
   color: white;
   border-radius: 50%;
   border: 3px solid white;
+  min-width: 35px;
   width: 35px;
   height: 35px;
   display: flex;
